# freealpharadar

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  colab_setup.ipynb  docker-compose.yml  manual_upload_template.csv  packages.txt  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements-warehouse.txt  requirements.txt  run_scorer.py  streamlit_app.py  universe.curated.txt  universe.txt
.github/workflows/: discover.yml  scheduler.yml
.streamlit/: config.toml
data/: prewarm_cache.json
data/sample/: sample_companies.json
discoveries/: 2026-06-01.md  2026-06-08.md  2026-06-15.md  2026-06-22.md  2026-06-29.md  2026-07-06.md  2026-07-13.md  2026-07-20.md
freealpharadar/: __init__.py  config.py  database.py  pipeline.py  sample_data.py  service.py  watchlist.py
freealpharadar/discovery/: __init__.py  __main__.py  discover.py  screen.py
freealpharadar/fetchers/: __init__.py  base.py  gdelt_fetcher.py  manual_csv.py  news_fetcher.py  patents_fetcher.py  sec_fetcher.py  yfinance_fetcher.py
freealpharadar/ml/: __init__.py  clustering.py  enrich.py  finbert.py  xgboost_model.py
freealpharadar/scoring/: __init__.py  engine.py  factors.py  normalize.py
freealpharadar/ui/: __init__.py  deep_dive.py  radar_screen.py  sidebar.py  watchlist.py
freealpharadar/utils/: __init__.py  logging_config.py
freealpharadar/warehouse/: __init__.py  __main__.py  config.py  downloader.py  loader.py  store.py
scripts/: check_sources.py
tests/: __init__.py  conftest.py  test_scoring.py  test_warehouse.py
